# PlatyGeno

./: .gitignore  ARCHITECTURE.md  BioRxiv_Technical_Report.md  CITATION.cff  LICENSE  NOTICE  PlatyGeno Technical Audit.md  PlatyGeno Technical Supplemental.md  README.md  REFERENCE.md  ibd_clinical_report2.csv  ibd_final_report.csv  masterfile.md  platygeno.py  pyproject.toml  requirements.txt  run_discovery.py  sample_Significance.csv
benchmarks/: discovery_hits.csv  ibd_clinical_report.csv  ibd_discovery_report.csv  step2_local_blast.py  step3_local_fold.py  validate_local.py
data/: layer26_features.csv  sample.fastq
docs/: ARCHITECTURE.md  BENCHMARK_METHODOLOGY.md  DOCUMENTATION.md  PHILOSOPHY.md  VALIDATION_METHODOLOGY.md
examples/: all_in_one_discovery.py  easy_discovery.py  gene_discovery_pipeline.py  gene_discovery_sample.py  run_discovery.py  step_by_step_discovery.py  viral_discovery_showcase.py
reports/: preliminary_discovery_report.md
scratch/: verify_32214.py
scripts/: analyze_sample_distribution.py  analyze_vostok.py  download_full.py  download_rare_sample.py  download_subset.py  fast_unzip.py  ftp_download.py  sequence_walker.py  translate_assembly.py
src/platygeno/: __init__.py  analyzer.py  cli.py  core.py  evo_reader.py  mapper.py  validator.py  workflow.py
validation/: PLG_Stage1_Significance.csv  blast_results_gut_final.csv  discovery_hits_0_20000_panoramic_gut_final.csv  discovery_pipeline.py  feature_22601.fasta  feature_7393.fasta  novel_sequences_gut_final.csv  potential_novel_sequences.fasta  single_fold.py  step1_discovery.py  step2_blast.py  step2_local_blast.py  step3_fasta_prep.py  step3_gpu_fold.py  step3_local_fold.py  step4_alpha_fold.py  step4_alphafold_run.py  validate_local.py
validation/sample_validation_analysis/: 1_analysis_summary.py  2_technique_comparison.py  3_novelty_profile.py  4_generate_figures.py  PLATYGENO_CLINICAL_AUDIT.md  PLATYGENO_VALIDATION_REPORT.md  PLG_Stage2_Novel_Sequences.csv  PLG_Stage2_Validation.csv  TECHNICAL_SUPPLEMENTAL.md  audit_validation.py  find_shifts_final.py  get_medians.py  table_discovery.md  table_novelty.md  table_stats.md  table_taxonomy.md
